--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "auth": "0.0.9",
     "auth0": "^2.9.1",
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "prettier": "1.12.1"
   }
 }
