--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "0": "0.0.0",
     "auth": "0.0.9",
     "auth0": "^2.9.1",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3"
   },
   "devDependencies": {
