--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auth0_rule_check",
   "version": "1.0.0",
   "description": "A simple app to check rules in auth0 associated applications",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
