--- a/package.json
+++ b/package.json
@@ -13,7 +13,5 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3"
   },
-  "devDependencies": {
-    "prettier": "1.12.1"
-  }
+  "devDependencies": {}
 }
