--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "auth0": "^2.9.1",
     "dotenv": "^5.0.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
