--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple app to check rules in auth0 associated applications",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jim Morrison",
@@ -12,12 +13,15 @@
     "auth0": "^2.9.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "pug": "^2.0.3",
     "request": "^2.85.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0"
+    "eslint-plugin-import": "^2.11.0",
+    "nodemon": "^1.17.4"
   }
 }
