--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "A simple app to check rules in auth0 associated applications",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jim Morrison",
   "license": "MIT",
   "dependencies": {
     "auth0": "^2.9.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "pug": "^2.0.3",
